<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.parra.lfelipe.geometria.MainActivity"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aviso1"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <RadioGroup
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cuadrado"
                    android:checked="true"
                    android:onClick="cambiarFigura"
                    android:id="@+id/rCuadrado"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/circulo"
                    android:onClick="cambiarFigura"
                    android:id="@+id/rCírculo"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/triangulo"
                    android:onClick="cambiarFigura"
                    android:id="@+id/rTriangulo"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cubo"
                    android:onClick="cambiarFigura"
                    android:id="@+id/rCubo"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:gravity="center_horizontal">
            <ImageView
                android:id="@+id/iFigura"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/cuadrado"
                android:layout_marginTop="30dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:id="@+id/tAviso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/aviso2"
                android:textColor="@color/black"/>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/tilLongitud">
                <EditText
                    android:hint="@string/aviso3"
                    android:ems="10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/eLongitud"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
        <Button
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Calcular"
            android:background="@color/colorAccent"
            android:onClick="calcularGeo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultados"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tResultados"/>
    </LinearLayout>
</LinearLayout>


